# meta-deep-research

./: .gitignore  .replit  README.md  auth.py  database.py  main.py  package-lock.json  package.json  pyproject.toml  replit.md  replit_state.db-shm  replit_state.db-wal
attached_assets/: Pasted-I-need-to-upgrade-the-Meta-Deep-Research-app-to-expose-_1765662061923.txt  Pasted-I-need-to-upgrade-the-Meta-Deep-Research-app-to-expose-_1765664062494.txt  Pasted-I-need-you-to-build-the-Meta-Deep-Research-backend-as-a_1765646028699.txt  add-puppeteer-pdf_1765751081406.md  fix-report-styling-concise_1765734776696.md  replit-agent-prompt_1765727678999.md  tailwind-typography-fix_1765732152211.md
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  SourcesList.tsx  index.css
client/src/components/: AgentSourceCard.tsx  Callout.tsx  CitationList.tsx  KeyFindingCard.tsx  ReportContainer.tsx  ReportRenderer.tsx  ReportSection.tsx
templates/: pdf_report.html
