[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "anthropic>=0.75.0",
    "fastapi>=0.124.4",
    "google-genai>=1.55.0",
    "httpx>=0.28.1",
    "langchain>=1.1.3",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "openai>=2.11.0",
    "uvicorn>=0.38.0",
]
