[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "anthropic>=0.75.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.124.4",
    "google-genai>=1.55.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "langchain>=1.1.3",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "markdown>=3.10",
    "openai>=2.11.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pyppeteer>=0.0.25",
    "python-jose[cryptography]>=3.5.0",
    "sift-stack-py>=0.9.5",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn>=0.38.0",
]
